@@ -1,5 +1,11 @@
 2014-06-18  Tom Tromey  <tromey@redhat.com>
 
+	* server.h: Include common-types.h.  Move gdb_assert.h include
+	earlier.  Add static assertion.
+	(gdb_byte, CORE_ADDR, LONGEST, ULONGEST): Remove.
+
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
 	* defs.h (CORE_ADDR): Now unsigned.
 
 2014-06-18  Tom Tromey  <tromey@redhat.com>
